<resources>
    <string name="app_name">TrentinoFloods</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="f_home_trentino_floods">Trentino Floods</string>
    <string name="f_home_subtitle">Esplora i dati dei sensori presenti dei bacini idrici in tempo reale su tutto il territorio!</string>
    <string name="card_map_subtitle">Visualizza tutti i sensori nella mappa</string>
    <string name="card_map_title">Mappa Floods</string>
    <string name="card_search_title">Ricerca</string>
    <string name="card_search_subtitle">Visualizza i sensori attraverso una ricerca</string>
    <string name="card_recent_title">Preferito</string>
    <string name="card_recent_subtitle">Visualizza i dati del sensore preferito</string>
    <string name="card_alert_title">Allerte PAT</string>
    <string name="card_alert_subtitle">Visualizza le ultime allerte emanate</string>
    <string name="bottom_sheet_title"><![CDATA[Info & Aiuto]]></string>
</resources>