<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.MainActivity">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.HomeFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/f_home_trentino_floods"
        android:textColor="@color/violetblue"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/f_home_subtitle"
        android:textColor="@color/gray"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />


    <!-- Map -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_card_map_floods"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:transitionName="cl_card_map_transition"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_card_map"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtitle">

        <ImageView
            android:id="@+id/map_flood_icon"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:src="@drawable/ic_world"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/map_flood_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/card_map_title"
            android:textColor="@color/violetblue"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/map_flood_subtitle"
            app:layout_constraintEnd_toStartOf="@+id/map_flood_icon_go"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/map_flood_icon"
            app:layout_constraintTop_toTopOf="@+id/map_flood_icon" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/map_flood_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/card_map_subtitle"
            android:textColor="@color/gray"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/map_flood_icon"
            app:layout_constraintEnd_toStartOf="@+id/map_flood_icon_go"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/map_flood_icon"
            app:layout_constraintTop_toBottomOf="@+id/map_flood_title" />

        <ImageView
            android:id="@+id/map_flood_icon_go"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_arrow_right"
            app:layout_constraintBottom_toBottomOf="@+id/map_flood_subtitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/map_flood_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <!-- END Map -->

    <!-- Search -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_card_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_card_search"
        android:transitionName="cl_card_search_transition"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cl_card_map_floods">

        <ImageView
            android:id="@+id/card_search_icon"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:src="@drawable/ic_explore"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/card_search_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/card_search_title"
            android:textColor="@color/violetblue"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/card_search_subtitle"
            app:layout_constraintEnd_toStartOf="@+id/card_search_icon_go"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/card_search_icon"
            app:layout_constraintTop_toTopOf="@+id/card_search_icon" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/card_search_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/card_search_subtitle"
            android:textColor="@color/gray"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/card_search_icon"
            app:layout_constraintEnd_toStartOf="@+id/card_search_icon_go"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/card_search_icon"
            app:layout_constraintTop_toBottomOf="@+id/card_search_title" />

        <ImageView
            android:id="@+id/card_search_icon_go"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_arrow_right"
            app:layout_constraintBottom_toBottomOf="@+id/card_search_subtitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/card_search_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <!-- END Search -->

    <!-- Recent -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_card_recent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:transitionName="cl_card_favorite_transition"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_card_recent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cl_card_search">

        <ImageView
            android:id="@+id/card_recent_icon"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:src="@drawable/ic_star"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/card_recent_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/card_recent_title"
            android:textColor="@color/violetblue"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/card_recent_subtitle"
            app:layout_constraintEnd_toStartOf="@+id/card_recent_icon_go"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/card_recent_icon"
            app:layout_constraintTop_toTopOf="@+id/card_recent_icon" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/card_recent_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/card_recent_subtitle"
            android:textColor="@color/gray"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/card_recent_icon"
            app:layout_constraintEnd_toStartOf="@+id/card_recent_icon_go"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/card_recent_icon"
            app:layout_constraintTop_toBottomOf="@+id/card_recent_title" />

        <ImageView
            android:id="@+id/card_recent_icon_go"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_arrow_right"
            app:layout_constraintBottom_toBottomOf="@+id/card_recent_subtitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/card_recent_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <!-- END Recent -->

    <!-- Alert -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_card_alert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:transitionName="cl_card_allerts_transition"
        android:background="@drawable/bg_card_alert"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cl_card_recent">

        <ImageView
            android:id="@+id/card_alert_icon"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:src="@drawable/ic_warning"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/card_alert_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/card_alert_title"
            android:textColor="@color/violetblue"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/card_alert_subtitle"
            app:layout_constraintEnd_toStartOf="@+id/card_alert_icon_go"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/card_alert_icon"
            app:layout_constraintTop_toTopOf="@+id/card_alert_icon" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/card_alert_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/card_alert_subtitle"
            android:textColor="@color/gray"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/card_alert_icon"
            app:layout_constraintEnd_toStartOf="@+id/card_alert_icon_go"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/card_alert_icon"
            app:layout_constraintTop_toBottomOf="@+id/card_alert_title" />

        <ImageView
            android:id="@+id/card_alert_icon_go"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_arrow_right"
            app:layout_constraintBottom_toBottomOf="@+id/card_alert_subtitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/card_alert_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <!-- END Alert -->
</androidx.constraintlayout.widget.ConstraintLayout>

    <include
        android:id="@+id/imported_bottom_sheet"
        layout="@layout/fragment_bottom_sheet" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>